# star-classifier-predictor

./: .gitignore  README.md  pyproject.toml
notebooks/: classifier_reviews.ipynb
src/: main.py
src/utils/: tools.py
