[project]
name = "star-classifier-predictor"
version = "0.1.0"
description = ""
authors = [
    {name = "AndersonIvanildo",email = "andersonivanildo@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "star_classifier_predictor", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
